fix spacing

--- a/src/presets/eu/src/eu-default-print.scss
+++ b/src/presets/eu/src/eu-default-print.scss
@@ -75,6 +75,11 @@
   @extend %ecl-unordered-list__item;
 }
 
+.ecl ul ol li:not([class*='ecl-'], [class*='wt-'], [class*='highcharts-']),
+.ecl ul ol li:is([class*='ecl-u-']) {
+  margin-inline-start: 0;
+}
+
 .ecl ol:not([class*='ecl-'], [class*='wt-']),
 .ecl ol:is([class*='ecl-u-']) {
   @extend %ecl-ordered-list;
